next-static/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-static-app-service
spec:
  selector:
    app: next-static-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
